use public domain Base64 class